  NavibaleImagePanel.imageMarkPoints() added along with overridable drawMark()
  EntityTablePanel.getViewImageControl() added, viewImage() added for overriding, not implemented yet
  Entity.KeyGenerator, primaryKeyProperty parameter removed from beforeInsert() and afterInsert()
  Entities.getModifiedColumnProperties() and getModifiedExceptionMessage() now static
  Entities.getForeignProperties() removed
  SwingEntityTableModel.isCellEditable() and setValueAt() no longer final
  EntityTablePanel now calls getJTable().getTableHeader().setReorderingAllowed() in constructor instead of initializeTable()
  Some minor changes
  Entity.Definition.getPrimaryKeyPropertyMap() added
  DefaultEntity.DefaultKey.domain field removed
  AbstractFilteredTableModel bug fixed, now guards against a null filterCondition
  FilteredModel implementations improved and made somewhat consistent
  FilteredTablePanel, EntityTablePanel, added constructor with JTable parameter
  UiUtil.setFontSize() added
  EntityApplicationPanel.selectFontSize() added, now sets the font size on application start
  EntityTablePanel now sets the row height according to font size
  ColumnConditionPanel, PropertyConditionPanel, Enter key no longer toggles enabled state
  EntityTableConditionPanel, Enter key now triggers table model refresh
  ColumnConditionModel.AutomaticWildcard enum added
  ColumnConditionModel.set/getAutomaticWildcard() now based on the the above enum, applicable only to string based LIKE or NOT_LIKE conditions
  Configuration.ConfigurationValue refactored
  Some configuration value keys now package based
  EntityApplicationPanel.selectFontSize() improved, now shows the font size in the combobox
  EventInfoListener renamed to EventDataListener
  LocalEntityConnection.populateStatementPropertiesAndValues() bug fixed, did not include properties with null values when inserting
  Fixed a few code smells
  Demo Swing applications started on the EDT
0.11.2